# magellan

./: .gitignore  .travis.yml  Cargo.toml  Makefile.am  NEWS  README  configure.ac  gpsami.doap  meson.build  net.figuiere.gpsami.json
data/: gpsami.desktop.in  meson.build  net.figuiere.gpsami.appdata.xml.in  net.figuiere.gpsami.desktop.in  net.figuiere.gpsami.gschema.xml
doc/: devices.md
po/: POTFILES  meson.build
scripts/: cargo.sh  release.sh
src/: actionqueue.rs  config.rs.in  devices.json  devices.rs  drivers.rs  file_chooser_button.rs  gpsami.gresource.xml  gpsbabel.rs  main.rs  meson.build  mgapplication.rs  mgwindow.ui  static_resources.rs.in  utils.rs
