[package]
name = "gpsami"
version = "0.1.0"
authors = ["Hubert Figuière <hub@figuiere.net>"]
license = "GPL-3"
edition = "2018"

[dependencies]
gtk4 = { version="0.1", git = "https://github.com/gtk-rs/gtk4-rs/" }
rustc-serialize = "0.3"
libudev = "0.2.0"
gudev = { version="^0.10.0", git = "https://gitlab.gnome.org/hub/gudev-rs/", branch = "unstable" }
dirs = "^1.0.5"

gettext-rs = { version = "0.4.4", features = ["gettext-system"] }

[[bin]]
name = "gpsami"
